# Deploy-yolov5-to-C-on-ubuntu20.4-through-onnxruntime-and-cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  onnxrun2
include/: serial_port.h  tower.h  yolo.h
src/: serial_port.cpp  tower.cpp  yolo.cpp
